hphp/hack/test/typecheck/lambda/lambda_arithmetic_bad.php.rust_elab.exp
File "lambda_arithmetic_bad.php", line 8, characters 6-6:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "lambda_arithmetic_bad.php", line 20, characters 11-32:
Invalid argument (Typing[4110])
  File "lambda_arithmetic_bad.php", line 11, characters 18-18:
  Expected `E`
  File "lambda_arithmetic_bad.php", line 19, characters 37-43:
  But got `int` because this is the result of an integer arithmetic operation
File "lambda_arithmetic_bad.php", line 22, characters 23-25:
Invalid argument (Typing[4110])
  File "lambda_arithmetic_bad.php", line 16, characters 30-31:
  Expected `int` because this is used in an arithmetic operation
  File "lambda_arithmetic_bad.php", line 22, characters 23-25:
  But got `num`
File "lambda_arithmetic_bad.php", line 24, characters 23-25:
Invalid argument (Typing[4110])
  File "lambda_arithmetic_bad.php", line 17, characters 30-31:
  Expected `int` because this is used in an arithmetic operation
  File "lambda_arithmetic_bad.php", line 24, characters 23-25:
  But got `num`
File "lambda_arithmetic_bad.php", line 26, characters 23-25:
Invalid argument (Typing[4110])
  File "lambda_arithmetic_bad.php", line 18, characters 30-31:
  Expected `int` because this is used in an arithmetic operation
  File "lambda_arithmetic_bad.php", line 26, characters 23-25:
  But got `num`
